# HedgeBot

./: Data.db  pyproject.toml  start.sh  teststart.py  trade-0.1.0-py3-none-any.whl  upd.sh
bybit/: pyproject.toml
bybit/bybit/: client.py  config.py  constants.py  errors.py  settings.py
database/: pyproject.toml
database/database/: init.py
database/database/models/: pyproject.toml
database/database/models/models/: user.py
main/: pyproject.toml
start/start/: trade_teststart.py  ui_telegram_teststart.py
strategies/: README.MD  pyproject.toml
strategies/strategies/: classic_strategy.py  constants.py  orders.py  positions.py  settings.py  test_strategy.py
trade_instruments/: pyproject.toml
ui/: pyproject.toml
ui/ui/telegram/: pyproject.toml
ui/ui/telegram/telegram/: bot.py  config.py
ui/ui/telegram/telegram/app/: pyproject.toml
ui/ui/telegram/telegram/app/app/handlers/: pyproject.toml
ui/ui/telegram/telegram/app/app/handlers/handlers/: addtraidingpair.py  adduser.py  allusers.py  common.py  start.py  traidingpairs.py
ui/ui/telegram/telegram/app/app/keyboards/: pyproject.toml
ui/ui/telegram/telegram/app/app/keyboards/keyboards/: buttons.py  simple_row.py
ui/ui/telegram/telegram/app/app/template_messages/: pyproject.toml
ui/ui/telegram/telegram/app/app/template_messages/template_messages/: template_messages.py
