[tool.poetry]
name = "bybit"
version = "0.1.0"
description = ""
authors = ["Коля <kopytovnn@gmailcom>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^12.0"
websocket = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
