[tool.poetry]
name = "strategies"
version = "0.1.0"
description = ""
authors = ["Коля <kopytovnn@gmailcom>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bybit = {path = "../bybit"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
