[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Коля <kopytovnn@gmailcom>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
handlers = { path = "./handlers/" }
keyboards = { path = "./keyboards/" }
template_messages = { path = "./template_messages/" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
